styles/css/vtex.minicart.css
.cartIcon {
    color: white;
}

.minicartContentContainer :global(.vtex-minicart-2-x-cartIcon) {
    font-size: 20rem;
}

.minicartQuantityBadge {
    background-color: #f44336;
}

.minicartSummary {
    color: white;
}

.minicartCheckoutButton{
    background-color: #59ff00;
}
.minicartCheckoutButton :global(.vtex-button__label){
    color: black;
}

